--- a/test2.html
+++ b/test2.html
@@ -73,7 +73,7 @@
     <body>
         <div class="container">
             <div class="header">
-                <div class="logo"><img src="headingimage.jpg" width="200px" class="imagelogo"></div>
+                <div class="logo"><img src="images/headingimage1.jpg" width="200px" class="imagelogo"></div>
                 <div class="title"><h2 class="fontstyle">Pre_Intern Course for Web Development</h2></div>
             </div>
             <div class="navbar">
