--- a/sterling_services.html
+++ b/sterling_services.html
@@ -133,13 +133,13 @@
     <body>
         <div class="container">
             <div class="header">
-                <div class="headerlogo"><img src="images/stl_logo.png" width="200px" class="imagelogo"></div>
+                <div class="headerlogo"><img src="image/stl_logo.png" width="200px" class="imagelogo"></div>
                 <div class="navbar">
                     <ul>
                         <li>Home</li>
-                        <li>About Us<img src="images/menu_arrow.png" width="10px" height="8px"></li>
+                        <li>About Us<img src="image/menu_arrow.png" width="10px" height="8px"></li>
                         <li>Services</li>
-                        <li>Project<img src="images/menu_arrow.png" width="10px" height="8px"></li>
+                        <li>Project<img src="image/menu_arrow.png" width="10px" height="8px"></li>
                         <li>Activities</li>
                         <li>Contact Us</li>
                     </ul>
@@ -176,19 +176,19 @@
             <div class="container">
                 <div class="row">
                     <div class="column">
-                      <img src="images/1_Services.jpg" style="width:110%">
+                      <img src="image/1_Services.jpg" style="width:110%">
                     </div>
                     <div class="column" style="margin-left: 35px;">
-                      <img src="images/2_Services.jpg" style="width:110%">
+                      <img src="image/2_Services.jpg" style="width:110%">
                     </div>
                     
                   </div>
                   <div class="row">
                     <div class="column">
-                      <img src="images/1_Services.jpg" style="width:110%">
+                      <img src="image/1_Services.jpg" style="width:110%">
                     </div>
                     <div class="column" style="margin-left: 35px;">
-                      <img src="images/2_Services.jpg" style="width:110%">
+                      <img src="image/2_Services.jpg" style="width:110%">
                     </div>
                     
                   </div>
@@ -212,9 +212,9 @@
                             <div class="column" style="background-color: #f1f1f2;">
                             <h4>CONTACT US<span class="headerline"></span></h2>
                             <ul style="list-style: none;line-height: 25px;">
-                                <li><img src="images/location.png" width="18px" height="14px">Room-1008,10th Floor,Building-B,50th Street Condominium,50th Street,Botahtaung Township,Yangon, Myanmar</li>
-                                <li><img src="images/phone.png" width="18px" height="14px">+(95) 9451299988,+(95)9 535 1714</li>
-                                <li><img src="images/mail.png" width="18px" height="14px">info@sterling-myanmar.com</li>
+                                <li><img src="image/location.png" width="18px" height="14px">Room-1008,10th Floor,Building-B,50th Street Condominium,50th Street,Botahtaung Township,Yangon, Myanmar</li>
+                                <li><img src="image/phone.png" width="18px" height="14px">+(95) 9451299988,+(95)9 535 1714</li>
+                                <li><img src="image/mail.png" width="18px" height="14px">info@sterling-myanmar.com</li>
                             </ul>
                             </div>
                             <div class="column" style="background-color:#f1f1f2;">
